--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:custom": "node build.js",
     "build:analyze": "ANALYZE=true npm run build",
     "build:production": "NODE_ENV=production npm run build",
+    "build:safe": "cross-env ENABLE_CSS_OPTIMIZATION=false npm run build",
     "build:start": "node scripts/build-and-start.js",
     "dev": "next dev",
     "lint": "next lint",
@@ -48,21 +49,21 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@remix-run/react": "latest",
-    "@sveltejs/kit": "latest",
-    "@vercel/analytics": "latest",
+    "@remix-run/react": "2.17.0",
+    "@sveltejs/kit": "2.37.0",
+    "@vercel/analytics": "1.5.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "latest",
+    "framer-motion": "12.23.12",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-themes": "latest",
+    "next-themes": "0.4.6",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -70,12 +71,12 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
-    "svelte": "latest",
+    "svelte": "5.38.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "vue": "latest",
-    "vue-router": "latest",
+    "vue": "3.5.20",
+    "vue-router": "4.5.1",
     "zod": "3.25.67"
   },
   "devDependencies": {
@@ -83,6 +84,8 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^7.0.3",
+    "critters": "^0.0.20",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
